@@ -28,6 +28,7 @@
             --add-opens=java.base/java.lang=ALL-UNNAMED
             --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
             --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+            --add-opens=java.sql/java.sql=ALL-UNNAMED
             --add-opens=java.base/sun.security.provider=ALL-UNNAMED
         </surefire.args>
 
